# trackio-tui

./: LICENSE  README.md  USAGE.md  generate_test_data.py  generate_test_data_sqlite.py  pyproject.toml  test_data_access.py  test_launch.py
trackio_tui/: __init__.py  __main__.py  app.py  config.py
trackio_tui/data/: __init__.py  cache.py  loader.py  state.py
trackio_tui/screens/: __init__.py  metrics.py  system_metrics.py
trackio_tui/styles/: main.tcss
trackio_tui/utils/: __init__.py  formatting.py  smoothing.py
trackio_tui/widgets/: __init__.py  control_panel.py  header.py  metric_plot.py  sidebar.py
trackio_vibetui/: __init__.py  __main__.py  app.py  config.py
trackio_vibetui/data/: __init__.py
trackio_vibetui/screens/: __init__.py  system_metrics.py
trackio_vibetui/styles/: main.tcss
trackio_vibetui/utils/: __init__.py  colors.py  metrics.py
trackio_vibetui/widgets/: __init__.py  header.py  metric_plot.py  run_selector.py  sidebar.py
