[project]
name = "trackio-vibetui"
version = "0.1.0"
description = "Terminal User Interface for Trackio ML experiment tracking"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "textual>=0.47.0",
    "textual-plotext>=0.2.0",
    "trackio>=0.8.0",
]

[project.scripts]
trackio-vibetui = "trackio_vibetui.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
